// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObsSocketSettings matches snapshot when obs socket is disabled 1`] = `
"<div>
  <div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
    <div class=\\"title\\">OBS Socket</div>
    <div class=\\"ipl-toggle__container layout horizontal center-horizontal\\" data-v-1d29c694=\\"\\">
      <div class=\\"ipl-toggle__text\\" data-v-1d29c694=\\"\\"><span class=\\"true-option\\" data-v-1d29c694=\\"\\">Enable</span><span class=\\"false-option selected\\" data-v-1d29c694=\\"\\">Disable</span></div>
      <div class=\\"ipl-toggle__button\\" data-v-1d29c694=\\"\\"></div>
    </div>
  </div>
  <div class=\\"ipl-message__wrapper layout horizontal center-vertical ipl-message__type-info m-t-8\\" data-v-5541e800=\\"\\"><svg class=\\"svg-inline--fa fa-info-circle fa-w-16 icon\\" aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"info-circle\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 512 512\\" data-v-5541e800=\\"\\">
      <path class=\\"\\" fill=\\"currentColor\\" d=\\"M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z\\"></path>
    </svg>
    <div class=\\"message-content\\" data-v-5541e800=\\"\\">
      <!----> OBS websocket is disabled.
    </div>
  </div>
</div>"
`;

exports[`ObsSocketSettings matches snapshot when status is CONNECTED 1`] = `
"<div>
  <div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
    <div class=\\"title\\">OBS Socket</div>
    <div class=\\"ipl-toggle__container layout horizontal center-horizontal\\" data-v-1d29c694=\\"\\">
      <div class=\\"ipl-toggle__text\\" data-v-1d29c694=\\"\\"><span class=\\"true-option selected\\" data-v-1d29c694=\\"\\">Enable</span><span class=\\"false-option\\" data-v-1d29c694=\\"\\">Disable</span></div>
      <div class=\\"ipl-toggle__button is-true\\" data-v-1d29c694=\\"\\"></div>
    </div>
  </div>
  <div class=\\"ipl-space color-dark m-t-8\\" data-v-11cc5f1c=\\"\\">
    <ipl-input-stub name=\\"socketUrl\\" label=\\"Socket address\\" modelvalue=\\"localhost:4444\\" type=\\"text\\" centered=\\"false\\" disabled=\\"false\\"></ipl-input-stub>
    <ipl-input-stub name=\\"password\\" label=\\"Password (Optional)\\" modelvalue=\\"pwd\\" type=\\"password\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-t-4\\"></ipl-input-stub>
    <ipl-button-stub label=\\"Connect\\" color=\\"blue\\" disabled=\\"false\\" async=\\"true\\" progressmessage=\\"Connecting...\\" successmessage=\\"Connected!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-t-8\\" data-test=\\"socket-connect-button\\" title=\\"Right-click to undo changes.\\"></ipl-button-stub>
    <div class=\\"ipl-space color-dark text-center m-t-8 text-semibold rounded-inner obs-status_CONNECTED\\" data-v-11cc5f1c=\\"\\">Connected</div>
  </div>
</div>"
`;

exports[`ObsSocketSettings matches snapshot when status is CONNECTING 1`] = `
"<div>
  <div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
    <div class=\\"title\\">OBS Socket</div>
    <div class=\\"ipl-toggle__container layout horizontal center-horizontal\\" data-v-1d29c694=\\"\\">
      <div class=\\"ipl-toggle__text\\" data-v-1d29c694=\\"\\"><span class=\\"true-option selected\\" data-v-1d29c694=\\"\\">Enable</span><span class=\\"false-option\\" data-v-1d29c694=\\"\\">Disable</span></div>
      <div class=\\"ipl-toggle__button is-true\\" data-v-1d29c694=\\"\\"></div>
    </div>
  </div>
  <div class=\\"ipl-space color-dark m-t-8\\" data-v-11cc5f1c=\\"\\">
    <ipl-input-stub name=\\"socketUrl\\" label=\\"Socket address\\" modelvalue=\\"localhost:4444\\" type=\\"text\\" centered=\\"false\\" disabled=\\"false\\"></ipl-input-stub>
    <ipl-input-stub name=\\"password\\" label=\\"Password (Optional)\\" modelvalue=\\"pwd\\" type=\\"password\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-t-4\\"></ipl-input-stub>
    <ipl-button-stub label=\\"Connect\\" color=\\"blue\\" disabled=\\"false\\" async=\\"true\\" progressmessage=\\"Connecting...\\" successmessage=\\"Connected!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-t-8\\" data-test=\\"socket-connect-button\\" title=\\"Right-click to undo changes.\\"></ipl-button-stub>
    <div class=\\"ipl-space color-dark text-center m-t-8 text-semibold rounded-inner obs-status_CONNECTING\\" data-v-11cc5f1c=\\"\\">Connecting</div>
  </div>
</div>"
`;

exports[`ObsSocketSettings matches snapshot when status is NOT_CONNECTED 1`] = `
"<div>
  <div class=\\"ipl-space color-dark\\" data-v-11cc5f1c=\\"\\">
    <div class=\\"title\\">OBS Socket</div>
    <div class=\\"ipl-toggle__container layout horizontal center-horizontal\\" data-v-1d29c694=\\"\\">
      <div class=\\"ipl-toggle__text\\" data-v-1d29c694=\\"\\"><span class=\\"true-option selected\\" data-v-1d29c694=\\"\\">Enable</span><span class=\\"false-option\\" data-v-1d29c694=\\"\\">Disable</span></div>
      <div class=\\"ipl-toggle__button is-true\\" data-v-1d29c694=\\"\\"></div>
    </div>
  </div>
  <div class=\\"ipl-space color-dark m-t-8\\" data-v-11cc5f1c=\\"\\">
    <ipl-input-stub name=\\"socketUrl\\" label=\\"Socket address\\" modelvalue=\\"localhost:4444\\" type=\\"text\\" centered=\\"false\\" disabled=\\"false\\"></ipl-input-stub>
    <ipl-input-stub name=\\"password\\" label=\\"Password (Optional)\\" modelvalue=\\"pwd\\" type=\\"password\\" centered=\\"false\\" disabled=\\"false\\" class=\\"m-t-4\\"></ipl-input-stub>
    <ipl-button-stub label=\\"Connect\\" color=\\"blue\\" disabled=\\"false\\" async=\\"true\\" progressmessage=\\"Connecting...\\" successmessage=\\"Connected!\\" requiresconfirmation=\\"false\\" shortconfirmationmessage=\\"false\\" small=\\"false\\" disableonsuccess=\\"false\\" href=\\"\\" class=\\"m-t-8\\" data-test=\\"socket-connect-button\\" title=\\"Right-click to undo changes.\\"></ipl-button-stub>
    <div class=\\"ipl-space color-dark text-center m-t-8 text-semibold rounded-inner obs-status_NOT_CONNECTED\\" data-v-11cc5f1c=\\"\\">Not connected</div>
  </div>
</div>"
`;
